--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "firebase": "^10.0.0",
     "init": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
